# Worms-Remake

./: .gitignore  CMakeLists.txt  Makefile  README.md  __conInstall_CMakeLists.txt  _conInstall__CMakeLists.txt  a.out  cosas para hacer.odt  editor  editor.glade  lista de clases gtk  tp
config/: config_editor.yaml  config_editor_unique.yaml  server_config.yaml
config/Maps/: Mi_mapa_de_prueba.yaml  ladder.yaml  only-grenade.yaml  rotated.yaml  simetric-map.yaml  test_map.yaml  triangles.yaml  un_worm.yaml  unique.yaml  v-map.yaml  water.yaml  worms-map.yaml
diagramas/: Makefile  diagrama de clases Juego.png.bak  diagramas.asta  modulos.asta
diagramas/Client/: Class Diagram1.asta  DataReceiver.asta  DataReceiver.png.bak  Diagrama estado menu.asta  Handlers.asta  Handlers.png.bak  ScreenView.asta  Secuencia updateWorm.asta  Viewable.asta  Weapons.asta
diagramas/Server/: Class Diagram1.asta  Class Diagram1.png.bak  Class Diagram3.asta  Class Diagram4.asta  Sequence Diagram0.asta  Sequence Diagram1.asta  diagram 2.asta  modulos.asta
documentation/: Makefile
documentation/Informe/: Documentacion tecnica  Manual de proyecto  Manual de usuario
resources/Glade/: #client_CreateGameMenu.glade#  #client_JoinGameMenu con scrollwindow.glade#  client_CreateGameMenu con scrollwindow.glade  client_CreateGameMenu con scrollwindow.glade~  client_CreateGameMenu.glade  client_CreateGameMenu.glade~  client_GameMenu.glade  client_GameMenu.glade~  client_JoinGameMenu con scrollwindow.glade  client_JoinGameMenu.glade  client_JoinGameMenu.glade~  client_ServerMenu.glade  client_ServerMenu.glade~  editor.glade  editor.glade~  victory_window.glade  victory_window.glade~
src/: ConfigFields.h  ObjectSizes.h  ObjectTypes.h  WeaponNames.h  Worm.cpp  Worm.h  client_main.cpp  common_Worm.cpp  editor_main.cpp  main.cpp  server_main.cpp
src/Archivos_viejos_Quizas_alguno_sirve/: ExplotionViewList.h  _Bullet.h  _server_Bullet.cpp
src/Client/: DataReceiver.cpp  DataReceiver.h  Handlers.h  Position.h  ViewsList.h  __main.cpp  client_DataReceiver.cpp  client_Handlers.cpp  client_Player.cpp  client_Player.h  client_PlayersList.cpp  client_Position.cpp  client_Timer.cpp  client_Timer.h  client_Turn.cpp  client_Turn.h  client_ViewsList.cpp  client_main.cpp  main.cpp
src/Common/: File.cpp  File.h
src/CommonUI/: GirderSize.cpp  GirderSize.h  Position.cpp  Position.h  ScrollHandler.cpp  ScrollHandler.h  ViewPositionTransformer.cpp  ViewPositionTransformer.h  ViewTransformer.cpp  ViewTransformer.h  Water.cpp  Water.h  editcli_Position.cpp
src/Defines/: ConfigFields.h  GamePlayers.h  ObjectSizes.h  Path.h  WeaponNames.h
src/Editor/: Editor.cpp  Editor.h  File.cpp  File.h  FileBoxController.cpp  FileBoxController.h  FileBoxView.cpp  FileBoxView.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  InvalidMapError.cpp  LifeView.cpp  LifeView.h  Map.cpp  Map.h  MapArea.cpp  MapArea.h  MapController.cpp  MapController.h  MapModel.cpp  MapModel.h  MapObject.cpp  MapObject.h  MapView.cpp  MapView.h  ObjectModel.cpp  ObjectModel.h  ObjectView.cpp  ObjectView.h  ToolBox.cpp  ToolBox.h  ToolBoxView.cpp  ToolBoxView.h  Toolbox.cpp  Toolbox.h  ToolboxController.cpp  (+63 more)
tp/: AtackRadius.h  DirectionDown.h  DirectionLeft.cpp  DirectionUp.cpp  DirectionUp.h  Position.cpp  Position.h  Weapon.cpp  Worm.cpp  tp
(+665 files in other folders)
